--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-easy-grid": "^0.2.2",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.10.1",
+    "react-native-mmkv": "^1.0.6",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.17.1",
